# pdf-snapshot

./: .gitignore  README.md  pdf_snapshot_tool  pyproject.toml  requirements.txt
docs/: API.md
pdf_snapshot/: __init__.py  cli.py  core.py
tests/: test_snapshot.py
